# ddnet-pvp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  autoexec.cfg  license.txt
.github/workflow/: ccp-p.yml
.github/workflows/: clang-sanitizer.yml  clang-tidy.yml  style.yml
.gitlab/: build.yml
cmake/: FindPnglite.cmake  FindZLIB.cmake
data/languages/: arabic.txt  belarusian.txt  bosnian.txt  brazilian_portuguese.txt  bulgarian.txt  catalan.txt  chuvash.txt  czech.txt  danish.txt  dutch.txt  finnish.txt  french.txt  german.txt  greek.txt  hungarian.txt  index.txt  italian.txt  japanese.txt  korean.txt  kyrgyz.txt  norwegian.txt  persian.txt  polish.txt  portuguese.txt  romanian.txt  russian.txt  serbian.txt  serbian_cyrillic.txt  simplified_chinese.txt  slovak.txt  spanish.txt  swedish.txt  traditional_chinese.txt  turkish.txt  ukrainian.txt
data/maps/: mega_std_collection.map  mega_std_collection.map.cfg
data/maps7/: mega_std_collection.map
datasrc/: compile.py  content.py  datatypes.py  network.py
datasrc/seven/: compile.py  datatypes.py  network.py
doc/: Docker-howto.md
doc/source-code-hack/: GameController.md  ServerSideTranslation.md
man/: generate.sh
other/: dmgsettings.py
other/vscode/: ddnet.code-workspace
room_config/: lobby.rcfg  modes.rcfg
room_config/maps/: all.rcfg  blockdown.rcfg  ctf.rcfg  dm.rcfg
room_config/modes/: block-down.rcfg  catch.rcfg  ctf.rcfg  dm.rcfg  gctf.rcfg  gdm.rcfg  gtdm.rcfg  ictf.rcfg  idm.rcfg  itdm.rcfg  lms.rcfg  lts.rcfg  tdm.rcfg  zcatch.rcfg
scripts/: tw_api.py
scripts/languages/: copy_fix.py  twlang.py  update_all.py
src/antibot/: antibot_data.h  antibot_null.cpp
src/base/: color.h  system.c  system.h  vmath.h
src/engine/: antibot.h  config.h  console.h  graphics.h  masterserver.h  server.h  storage.h
src/engine/server/: authmanager.h  register.cpp  server.cpp  server.h
src/engine/server/databases/: connection_pool.h  mysql.cpp
src/engine/shared/: config.cpp  config.h  config_variables.h  console.cpp  console.h  datafile.cpp  demo.cpp  econ.cpp  econ.h  http.cpp  network.cpp  network.h  network_client.cpp  network_conn.cpp  network_server.cpp  protocol_ex.h  snapshot.cpp  storage.cpp  websockets.cpp
src/game/: collision.cpp  collision.h  ddracechat.h  ddracecommands.h  gamecore.cpp  gamecore.h  layers.cpp  localization.cpp  localization.h  mapitems.h  teamscore.cpp  teamscore.h  tuning.h  variables.h  version.h  voting.h
src/game/server/: ddracechat.cpp  ddracecommands.cpp  entity.cpp  entity.h  eventhandler.cpp  eventhandler.h  gamecontext.cpp  gamecontext.h  gamecontroller.cpp  gamecontroller.h  gamemodes.h  gameworld.cpp  gameworld.h  player.cpp  player.h  teams.cpp  teams.h  teeinfo.cpp  teeinfo.h  weapon.cpp  weapon.h  weapons.h
src/game/server/ModCore/: README.md
src/game/server/ModCore/BlockDown/: player.cpp  player.h
src/game/server/entities/: character.cpp  character.h  door.cpp  door.h  dragger.cpp  dragger.h  dumbentity.cpp  dumbentity.h  flag.cpp  flag.h  gun.cpp  gun.h  laser.cpp  laser.h  light.cpp  light.h  pickup.cpp  pickup.h  plasma.cpp  plasma.h  projectile.cpp  projectile.h  textentity.cpp  textentity.h
src/game/server/gamemodes/: block-down.cpp  block-down.h  catch.cpp  catch.h  ctf.cpp  ctf.h  dm.cpp  dm.h  fng.cpp  fng.h  instagib.cpp  instagib.h  lms.cpp  lms.h  lts.cpp  lts.h  tdm.cpp  tdm.h
src/game/server/weapons/: explodinglaser.cpp  explodinglaser.h  freeze-laser.cpp  freeze-laser.h  grenade.cpp  grenade.h  hammer.cpp  hammer.h  infection-hammer.cpp  infection-hammer.h  lasergun.cpp  lasergun.h  ninja.cpp  ninja.h  pistol.cpp  pistol.h  shotgun.cpp  shotgun.h  useless-gun.cpp  useless-gun.h
src/test/: netaddr.cpp  str.cpp
src/tools/: crapnet.cpp  map_diff.cpp  map_merge.cpp
